# fastapi_base_dao

./: .gitignore  README.md  pyproject.toml
app/: base.py  config.py  database.py  main.py  models.py  schemas.py  schemes.py
app/api/: book.py  person.py
app/repositories/: book_repo.py  person_repo.py
app/services/: book_service.py  person_service.py
infra/: docker-compose.yaml
migration/: env.py
migration/versions/: 5a97e25c58c0_init_rev.py  dc1b1090dd28_init_rev.py
