[tool.poetry]
name = "fastapi-base-dao"
version = "0.1.0"
description = "base dao for fastapi apps"
authors = ["mvrogozov <mv.rogozov@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.116.1"
uvicorn = "^0.35.0"
sqlmodel = "^0.0.24"
pydantic-settings = "^2.10.1"
alembic = "^1.16.4"
asyncpg = "^0.30.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
